Refactor: modernize project, update namespaces/paths, resolve build errors

--- a/scncore-rmm-web-console/Components/_Imports.razor
+++ b/scncore-rmm-web-console/Components/_Imports.razor
@@ -8,8 +8,8 @@
 @using Microsoft.JSInterop
 @using MudBlazor
 @using MudBlazor.Services
-@using NetLock_RMM_Web_Console
-@using NetLock_RMM_Web_Console.Components
+@using scncore_rmm_web_console
+@using scncore_rmm_web_console.Components
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Blazored.LocalStorage
